[package]
name = "wasm-validate"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasmi = "0.5.0"
wasmparser = "0.35.1"

[profile.release]
lto = true
